#887 closed defect (fixed)
Assertion error in swresample.c
| Reported by: | Oana Stratulat | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | undetermined |
| Version: | git-master | Keywords: | aac abort crash |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
The file supplied has too many channels 22. The max number of allowed channels is 16.
Attachments (4)
Change History (10)
by , 15 years ago
by , 15 years ago
| Attachment: | 0001-Patch-for-assertion-error-in-swresample.c.-Fiexes-bu.patch added |
|---|
Patch for this bug.
by , 15 years ago
| Attachment: | 0001-Patch-for-assertion-error-in-swresample.c.-Fiexes-bu.2.patch added |
|---|
Patch for this bug.
comment:1 by , 15 years ago
| Component: | FFmpeg → undetermined |
|---|---|
| Keywords: | aac added |
| Reproduced by developer: | set |
| Status: | new → open |
Regression since 810a14d
Is this a valid sample or was it produced with zzuf or similar?
comment:3 by , 15 years ago
Patch message edited, "inputput" typo fixed, and pushed. Thanks.
I'm not closing the issue since Michael might want to comment on the regression.
comment:4 by , 15 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Since the file was intentionally broken, I don't think decoding is necessary.
comment:5 by , 14 years ago
| Keywords: | abort added |
|---|
comment:6 by , 14 years ago
| Keywords: | crash added |
|---|
Note:
See TracTickets
for help on using tickets.



use this file to reproduce the crash